# projective_geometry_M2

./: CMakeLists.txt  pyproject.toml
src/: ViewerApplication.cpp  ViewerApplication.hpp  main.cpp
src/shaders/: skybox.fs.glsl  skybox.vs.glsl
src/utils/: FreeFlyCamera.hpp  GLFWHandle.hpp  Player.cpp  Player.hpp  bbox.hpp  cameras.cpp  cameras.hpp  cube.hpp  filesystem.hpp  images.hpp  line.hpp  quad.hpp  shaders.hpp  skybox.hpp  uniformHandler.hpp
tests/: conftest.py  test_build.py  test_models.py
